# djangojs

./: .gitignore  README.md  hello.py  martor-test.py  pyproject.toml
todoproject/gcs/: djangojs-443407-889538a78524.json
todoproject/templates/: about.html  base.html  blog_detail.html  blog_list.html  contact.html  index.html  media_feed.html  schedule.html  services.html  tableau.html  todo.html
todoproject/todoapp/: admin.py  forms.py  models.py  urls.py  views.py
todoproject/todoapp/migrations/: 0001_initial.py  0002_rename_completed_todo_is_completed_and_more.py  0003_blogpost.py  0004_media.py  0005_alter_blogpost_content.py  0006_contactform_alter_blogpost_content.py  0007_alter_contactform_service.py  0008_alter_contactform_service.py
todoproject/todoproject/: settings.py  urls.py
