[project]
name = "djangojs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django-storages>=1.14.4",
    "django>=4.2.16",
    "google-cloud-storage>=2.18.2",
    "django-markdown-editor>=1.0.3",
    "martor>=1.6.45",
    "markdown>=3.5.2",
]
